--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,34 @@
 # Windows thumbnail cache files
-Thumbs.db
+[Tt]humbs.db
 ehthumbs.db
 ehthumbs_vista.db
 
 # Folder config file
-Desktop.ini
+[Dd]esktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
 # Windows shortcuts
 *.lnk
 
-# =========================
-# Operating System Files
-# =========================
+# macOS specific files
+.DS_Store
+__macosx
 
-# Specific Files
+
+.*
+!/.gitattributes
+!/.gitconfig
+!/.github
+!/.gitignore
+!/.gitmodules
+!/.bgforge.yml
+
+
+# Mod Specific Files
+*.iemod
 *.ahk
 *.rar
 *.zip
+*.tar*
