using globally unique labels
Tell PI that the mod is using globally unique labels so it can use them to save components

--- a/BGEEClassicMovies/BGEEClassicMovies.ini
+++ b/BGEEClassicMovies/BGEEClassicMovies.ini
@@ -27,5 +27,8 @@ Forum = http://www.shsforums.net/topic/55573-mod-bgee-classic-movies/
 # read more about Delta Updates https://github.com/ALIENQuake/ProjectInfinity/wiki/Delta-Updates-for-mods-hosted-at-Github
 Download = https://github.com/Sampsca/BGEE-Classic-Movies
 
+# Type of LABELs used by the mod, read more here https://www.gibberlings3.net/forums/topic/32516-tutorial-what-is-label
+LabelType = GloballyUnique
+
 # Specify install order definitions
 AFTER = LeUI-BG1EE, LeUI-SoD, LeUI, EET, EET_gui
